# nucleus

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  nucleus.sln
docs/: cpu.md  gpu.md  index.md  keys.md  system.md
docs/development/: building.md  coding-style.md  conventions.md  overview.md  roadmap.md
docs/technical/: cpu.md  gpu.md
docs/technical/ps3/: cpu.md  gpu.md  system.md
docs/technical/ps4/: gpu.md
docs/user/: credits.md  faq.md  keys.md
nucleus/: architecture.h  assert.h  common.h  compiler.h  config.cpp  config.h  debugger.cpp  debugger.h  emulator.cpp  emulator.h  endianness.h  feature.h  fmt.cpp  format.cpp  format.h  literals.h  logging.h  macro.h  main.cpp  nucleus-core.vcxproj  nucleus-core.vcxproj.filters  nucleus.cpp  nucleus.h  nucleus.rc  nucleus.vcxproj  nucleus.vcxproj.filters  opengl.cpp  opengl.h  opengl_tables.h  platform.h  resource.h  target.h  types.h  version.h
nucleus/audio/: audio.h  audio.vcxitems.filters  audio.vcxproj
nucleus/audio/backend/: audio-coreaudio.vcxitems  audio-openal.vcxitems  audio-xaudio2.vcxitems  list.h
nucleus/core/: config.cpp  config.h  core.vcxitems  core.vcxitems.filters  core.vcxproj  core.vcxproj.filters  host.cpp  host.h  resource.cpp  resource.h  resource.inl
nucleus/cpu/: cell.cpp  cell.h  cpu.cpp  cpu.h  cpu.vcxitems  cpu.vcxitems.filters  cpu.vcxproj  cpu.vcxproj.filters  cpu_guest.cpp  cpu_guest.h  cpu_host.cpp  cpu_host.h  decoder.h  state.h  thread.cpp  thread.h  translator.h  util.cpp  util.h
nucleus/cpu/backend/: assembler.cpp  assembler.h  compiler.cpp  compiler.h  engine.cpp  engine.h  sequences.h  settings.h  symbol_resolver.cpp  symbol_resolver.h  symbols.cpp  symbols.h  target.h
nucleus/cpu/frontend/: frontend_block.cpp  frontend_block.h  frontend_function.h  frontend_module.cpp  frontend_module.h  frontend_recompiler.h  frontend_segment.h
nucleus/cpu/hir/: block.cpp  block.h  builder.cpp  builder.h  cpu_builder.cpp  cpu_instruction.cpp  function.cpp  function.h  (+13 more)
nucleus/debugger/: debugger.cpp  debugger.h  debugger.vcxitems  debugger.vcxproj  debugger.vcxproj.filters
nucleus/filesystem/: device.h  directory.h  file.h  filesystem.cpp  filesystem.h  filesystem.vcxitems  filesystem.vcxitems.filters  filesystem.vcxproj  filesystem.vcxproj.filters  filesystem_app.cpp  filesystem_app.h  filesystem_application.cpp  filesystem_application.h  filesystem_host.cpp  filesystem_host.h  filesystem_resource.cpp  filesystem_resource.h  filesystem_virtual.cpp  filesystem_virtual.h  local_file.cpp  path.h  utils.cpp  utils.h  vfsLocalFile.cpp  vfsLocalFile.h  virtual_filesystem.cpp  virtual_filesystem.h
nucleus/gpu/: gpu.cpp  gpu.h  gpu.vcxitems  gpu.vcxitems.filters  gpu.vcxproj  gpu.vcxproj.filters  gpu_hash.h  list.h  renderer.h  rsx.cpp  rsx.h  rsx_dma.cpp  rsx_dma.h  rsx_enum.h  rsx_fp.h  rsx_methods.h  rsx_pgraph.cpp  rsx_pgraph.h  rsx_texture.h  rsx_vp.h  texture_cache.cpp  texture_cache.h
nucleus/graphics/: backends.h  command_buffer.h  command_queue.h  fence.h  format.cpp  format.h  format.inl  graphics.cpp  graphics.h  graphics.vcxitems  graphics.vcxitems.filters  graphics.vcxproj  graphics.vcxproj.filters  heap.h  pipeline.h  primitive.h  rectangle.h  resource.h  shader.h  target.h  texture.h  vertex_buffer.h  viewport.h
nucleus/loader/: keys.cpp  keys.h  loader.cpp  loader.h  psf.cpp  psf.h  self.cpp  self.h
nucleus/logger/: logger.cpp  logger.h  logger.vcxitems  logger.vcxproj  logger.vcxproj.filters
nucleus/memory/: list.h  memory.cpp  memory.h  memory.vcxitems  memory.vcxitems.filters  memory.vcxproj  memory.vcxproj.filters  object.cpp  object.h  segment.cpp  segment.h
nucleus/syscalls/: callback.h  lv1.h  lv2.cpp  lv2.h  module.cpp  module.h  object.h  syscall.h
nucleus/system/: callback.h  elf64.h  elf64_loader.h  hle_module.cpp  information.cpp  information.h  keys.cpp  keys.h  list.h  loader.cpp  loader.h  lv1.h  lv2.cpp  lv2.h  module.cpp  module.h  object.h  syscall.h  system.cpp  system.h  system.vcxitems  system.vcxitems.filters  system.vcxproj  system.vcxproj.filters
nucleus/ui/: event.h  font.cpp  font.h  icon.h  language.cpp  language.h  length.h  screen.cpp  screen.h  style.h  surface.cpp  surface.h  transitions.cpp  transitions.h  ui.cpp  ui.h  ui.vcxitems  ui.vcxitems.filters  ui.vcxproj  ui.vcxproj.filters  widget.cpp  widget.h
resources/languages/: de_DE.xml  en_US.xml  es_ES.xml
resources/shaders/: ui_widget_container_ps.glsl  ui_widget_container_ps.spv  ui_widget_container_vs.glsl  ui_widget_container_vs.spv  ui_widget_image_ps.glsl  ui_widget_image_ps.spv  ui_widget_image_vs.glsl  ui_widget_image_vs.spv  ui_widget_ps.glsl  ui_widget_ps.spv  ui_widget_text_ps.glsl  ui_widget_text_ps.spv  ui_widget_text_vs.glsl  ui_widget_text_vs.spv  ui_widget_vs.glsl  ui_widget_vs.spv
tests/: common.h  test_common.cpp
tests/cpu/: common.h  test_cpu.vcxproj  test_cpu.vcxproj.filters  test_ir.cpp  test_ppc.cpp  test_ppc.h  test_ppc.inl  test_spu.cpp  test_spu.h  test_spu.inl
tests/unit/: common.cpp  test_common.cpp  unit.vcxproj  unit.vcxproj.filters
tools/: README.md  nucleus-clean.py  nucleus-format.py  nucleus-init.py  nucleus-preprocess.py
wrappers/android/: AndroidManifest.xml  build.xml  main.cpp  nucleus-android-native.vcxproj  nucleus-android-native.vcxproj.filters  nucleus-android.androidproj
wrappers/ios/: Info.plist  Nucleus-Info.plist  main.mm  nucleus-ios.iosproj  nucleus-ios.iosproj.filters  vcreference.xcconfig
wrappers/linux/: main.cpp  window-wayland.cpp  window-wayland.h  window-xcb.cpp  window-xcb.h  window-xlib.cpp  window-xlib.h
wrappers/uwp/: .gitignore  App.cpp  App.h  App.xaml  App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  nucleus-uwp.vcxproj  nucleus-uwp.vcxproj.filters
wrappers/windows/: drop_target.cpp  drop_target.h  main.cpp  nucleus-windows.rc  nucleus-windows.vcxproj  nucleus-windows.vcxproj.filters  nucleus.vcxproj  nucleus.vcxproj.filters  resource.h  window.cpp  window.h  window_opengl.cpp  window_opengl.h
(+536 files in other folders)
